# axolos

./: .gitignore  README.md  builder.sh  grub.cfg  init.c  readme.txt
docs/: notes.txt
src/axolospkg/: Cargo.toml
src/axolospkg/src/: main.rs
