[package]
name = "axolospkg"
author = "wheatfox"
description = "A simple package auto build an upload system for axolos distro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
reqwest = "0.12.3"
simple_logger = "4.3.3"
tokio = "1.37.0"
